crates/hexeract-macros/tests/ui/fail_trait_impl.stderr
error: #[handler] must annotate a bare inherent impl, not a trait implementation
  --> tests/ui/fail_trait_impl.rs:12:1
   |
12 | / impl CommandHandler<Cmd> for H {
13 | |     type Error = HexeractError;
14 | |     async fn handle(&self, _c: Cmd, _ctx: &HandlerContext) -> Result<(), HexeractError> {
15 | |         Ok(())
16 | |     }
17 | | }
   | |_^

warning: unused imports: `CommandHandler`, `HandlerContext`, and `HexeractError`
 --> tests/ui/fail_trait_impl.rs:1:30
  |
1 | use hexeract_core::{Command, CommandHandler, HandlerContext, HexeractError};
  |                              ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
